--- a/assets/stylesheets/game.css
+++ b/assets/stylesheets/game.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to right, #070000, #30d9ff, #070000);
+  background: linear-gradient(to right, #070000, #56b6ad, #070000);
   background-size: 100vw 100vh;
   color: white;
 }
@@ -30,13 +30,13 @@ canvas {
   background-color: rgba(0,0,0,.5);
   display: block;
   margin: 0 auto;
-  border: 2px solid black;
+  border: 4px solid black;
   border-radius: 10px;
 }
 
 h1 {
   width: max-content;
-  font-size: 62px;
+  font-size: 102px;
   margin: 0 auto;
   font-family: 'Bangers', cursive;
   text-shadow: 2px 2px #ff0000;
@@ -44,10 +44,11 @@ h1 {
 }
 
 h2 {
-  font-size: 34px;
+  font-size: 50px;
+  padding: 5px;
   font-family: 'Bangers', cursive;
   text-shadow: 2px 2px #ff0000;
-  -webkit-text-stroke: .px black;
+  -webkit-text-stroke: 1px black;
 }
 
 .rules, .personal-links{
@@ -62,6 +63,7 @@ h2 {
   border-radius: 10px;
   padding: 20px;
   line-height: 35px;
+  border: 2px solid black;
 }
 
 .rules {
