--- a/assets/stylesheets/game.css
+++ b/assets/stylesheets/game.css
@@ -1,7 +1,7 @@
 
 body {
   background: linear-gradient(to right, #070000, #00BCD4, #070000);
-  /* background-image: url("../background.jpg"); */
+  /* background-image: url("../pic04.jpg"); */
   background-size: 100vw 100vh;
   color: white;
 }
