--- a/assets/stylesheets/game.css
+++ b/assets/stylesheets/game.css
@@ -35,13 +35,10 @@ body {
   list-style: none;
 }
 
-#BubbleBurstCanvas{
-  padding: 1px;
-}
-  #BubbleBurstCanvas:hover{
-    /* cursor: none; */
 
-  }
+  /* #BubbleBurstCanvas:hover{
+    cursor: none;
+  } */
 
 a {
   color: white;
